--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
     "firebase": "^8.3.0",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
+    "react-datetime": "^3.0.4",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.5",
     "react-router-dom": "^5.2.0",
